--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                              <a href="index.html"><img style="height: 80px; " src="images/logo.png" alt=""/> Boosted Cars
+                              </a>
                            </div>
                         </div>
                      </div>
@@ -65,7 +66,7 @@
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="furnitures.html">Furnitures</a>
+                                 <a class="nav-link" href="furnitures.html">Services</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="testimonial.html">Testimonial</a>
@@ -112,7 +113,7 @@
                            </div>
                            <div class="col-md-6">
                               <div class="text_img">
-                                 <figure><img src="images/car.png" alt="#"/></figure>
+                                 <figure><img src="images/Red-Ferrari-PNG-Photo.png" alt="#"/></figure>
                               </div>
                            </div>
                         </div>
@@ -133,7 +134,7 @@
                            </div>
                            <div class="col-md-6">
                               <div class="text_img">
-                                 <figure><img src="images/car.png" alt="#"/></figure>
+                                 <figure><img src="images/rollsroyce.png" alt="#"/></figure>
                               </div>
                            </div>
                         </div>
@@ -154,7 +155,7 @@
                            </div>
                            <div class="col-md-6">
                               <div class="text_img">
-                                 <figure><img src="images/car.png" alt="#"/></figure>
+                                 <figure><img src="images/bmw.png" alt="#"/></figure>
                               </div>
                            </div>
                         </div>
@@ -177,22 +178,22 @@
             <div class="row">
                <div class="col-md-4">
                   <div class="box_text">
-                     <h3>AUTO DIAGNOSE</h3>
-                     <i><img src="images/thr.png" alt="#"/></i>
+                     <h3>INTERIOR CHECK</h3>
+                     <i><img src="images/interiorcheck.jpeg" alt="#"/></i>
                      <p>ipsum dolor sit amet, consectetur adipiscing elit, sed d veniam, adipiscing elit, sed d veniam</p>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="box_text">
-                     <h3>AUTO DIAGNOSE</h3>
-                     <i><img src="images/thr1.png" alt="#"/></i>
+                     <h3>OIL CHANGE</h3>
+                     <i><img style="color: #a01211 " src="images/oilchange.jpeg" alt="#"/></i>
                      <p>ipsum dolor sit amet, consectetur adipiscing elit, sed d veniam, adipiscing elit, sed d veniam</p>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="box_text">
-                     <h3>AUTO DIAGNOSE</h3>
-                     <i><img src="images/thr2.png" alt="#"/></i>
+                     <h3>TYRE CHANGE</h3>
+                     <i><img src="images/tyrechange.jpeg" alt="#"/></i>
                      <p>ipsum dolor sit amet, consectetur adipiscing elit, sed d veniam, adipiscing elit, sed d veniam</p>
                   </div>
                </div>
@@ -215,9 +216,14 @@
                   <div class="col-md-10 offset-md-1">
                      <div class="about_img">
                         <div class="about_box">
-                           <h3>Dolor sit amet, consectetur adipiscing elit,  </h3>
-                           <p>dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
                            <a class="read_more">Read More</a>
+                           <h3>As your go to Car Treatment Home,</h3>
+                           <p>
+
+We offer a full range of garage services to vehicle owners located in Tucson area. All mechanic services are performed by highly qualified mechanics. We can handle any car problem.
+
+We offer full range of garage services to vehicle owners in Tucson. Our professionals know how to handle a wide range of car services. Whether you drive a passenger car or medium sized truck or SUV, our mechanics strive to ensure that your vehicle will be performing at its best before leaving our car shop. Whether you drive a medium sized truck or passenger car or SUV, our mechanics strive to ensure.
+</p>
                         </div>
                      </div>
                   </div>
@@ -233,7 +239,7 @@
                <div class="col-md-12">
                   <div class="titlepage">
                      <h2>What We Do</h2>
-                     <p>It is a long established fact that a reader will be distracted by the </p>
+                     <p>These are some of the car fiestas and meetups that we arrange.</p>
                   </div>
                </div>
             </div>
@@ -242,34 +248,34 @@
                   <div class="row">
                      <div class="col-md-6 margin_bottom">
                         <div class="work">
-                           <figure><img src="images/img1.png" alt="#" /></figure>
+                           <figure><img src="images/enginebay.jpeg" alt="#" /></figure>
                         </div>
                         <div class="work_text">
-                           <h3>Quick repair<br><span class="blu">Total Service</span></h3>
+                           <h3>Hood shows<br><span class="blu">Pop your trunk open!</span></h3>
                         </div>
                      </div>
                      <div class="col-md-6 margin_bottom">
                         <div class="work">
-                           <figure><img src="images/img2.png" alt="#" /></figure>
+                           <figure><img src="images/tyreburnout.jpeg" alt="#" /></figure>
                         </div>
                         <div class="work_text">
-                           <h3>Quick repair<br><span class="blu">Total Service</span></h3>
+                           <h3>Burnouts<br><span class="blu">Test your tyre game!</span></h3>
                         </div>
                      </div>
                      <div class="col-md-6 margin_bottom">
                         <div class="work">
-                           <figure><img src="images/img3.png" alt="#" /></figure>
+                           <figure><img src="images/atvsessions.jpeg" alt="#" /></figure>
                         </div>
                         <div class="work_text">
-                           <h3>Quick repair<br> <span class="blu">Total Service</span></h3>
+                           <h3>ATV Meetups<br> <span class="blu">Don't miss out!</span></h3>
                         </div>
                      </div>
                      <div class="col-md-6 margin_bottom">
                         <div class="work">
-                           <figure><img src="images/img4.png" alt="#" /></figure>
+                           <figure><img src="images/costumecars.jpeg" alt="#" /></figure>
                         </div>
                         <div class="work_text">
-                           <h3>Quick repair<br><span class="blu">Total Service</span></h3>
+                           <h3>Costume Meetups<br><span class="blu">Dress up and drive!</span></h3>
                         </div>
                      </div>
                   </div>
